--- a/src/CommonFrame.html
+++ b/src/CommonFrame.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="layui/css/layui.css">
     <script type="text/javascript" src="layui/layui.js"></script>
     <link rel="stylesheet" type="text/css" href="css/base.css">
+    <script type="text/javascript" src="js/common.js"></script>
 </head>
 
 <body>
