--- a/src/CommonFrame.html
+++ b/src/CommonFrame.html
@@ -166,25 +166,73 @@
             </div>
             <div class="layui-tab">
                 <ul class="com-tab-title type-2">
-                    <li class="active"><a  href="#tbd-1" data-toggle="tab">全部</a></li>
+                    <li class="active"><a href="#tbd-1" data-toggle="tab">全部</a></li>
                     <li data-toggle="tab"><a href="#tbd-2" data-toggle="tab">正常</a></li>
                     <li data-toggle="tab"><a href="#tbd-3" data-toggle="tab">待审核</a></li>
                     <li data-toggle="tab"><a href="#tbd-4" data-toggle="tab">已删除</a></li>
                 </ul>
-                <div class="com-tab-body active p15" id="tbd-1">全部</div>
-                <div class="com-tab-body p15" id="tbd-2">正常</div>
-                <div class="com-tab-body p15" id="tbd-3">待审核</div>
-                <div class="com-tab-body p15" id="tbd-4">已删除</div>
+                <div class="layui-form mt20">
+                    <div class="layui-inline mb15">
+                        <label class="layui-form-label w60">榜单名称</label>
+                        <div class="layui-input-block ml90">
+                            <input type="text" name="title" placeholder="榜单名称" class="layui-input">
+                        </div>
+                    </div>
+                    <div class="layui-inline mb15 w200">
+                        <label class="layui-form-label w60">类型</label>
+                        <div class="layui-input-block ml90">
+                            <select>
+                                <option value=""></option>
+                                <option value="0">写作</option>
+                                <option value="1">阅读</option>
+                                <option value="2">游戏</option>
+                                <option value="3">音乐</option>
+                                <option value="4">旅行</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="layui-inline mb15">
+                        <label class="layui-form-label w60">分类</label>
+                        <div class="layui-input-inline w170">
+                            <select name="quiz1">
+                                <option value="">分类01</option>
+                                <option value="浙江" selected="">分类02</option>
+                                <option value="你的工号">分类03</option>
+                                <option value="你最喜欢的老师">分类04</option>
+                            </select>
+                        </div>
+                        <div class="layui-input-inline w170">
+                            <select name="quiz2">
+                                <option value="">请选择市</option>
+                                <option value="杭州">杭州</option>
+                                <option value="宁波" disabled="">宁波</option>
+                                <option value="温州">温州</option>
+                                <option value="温州">台州</option>
+                                <option value="温州">绍兴</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="layui-inline mb15 ml20">
+                        <input type="submit" class="layui-btn pl30 pr30" value="搜索" />
+                    </div>
+                </div>
             </div>
+            <div class="com-tab-body active pl15 pr15" id="tbd-1">
+                <table class="layui-hide" id="test"></table>
+            </div>
+            <div class="com-tab-body p15" id="tbd-2">正常</div>
+            <div class="com-tab-body p15" id="tbd-3">待审核</div>
+            <div class="com-tab-body p15" id="tbd-4">已删除</div>
         </div>
     </div>
+    </div>
     <script type="text/javascript">
-    layui.use(["tab","sideMenu"]);
+    layui.use(["tab", "sideMenu", "form"]);
 
-    layui.use(["jquery",],function($){
-        
-        $("a[href='#tbd-2']").on("shown.bs.tab",function(){
-             alert("shown.bs.tab")
+    layui.use(["jquery"], function($) {
+
+        $("a[href='#tbd-2']").on("shown.bs.tab", function() {
+            alert("shown.bs.tab")
         })
         // $("a[href='#tbd-2']").on("show.bs.tab",function(){
         //     alert("show.bs.tab")
@@ -194,6 +242,28 @@
         var $ = layui.jquery,
             element = layui.element;
     })
+
+    layui.use('table', function(){
+  var table = layui.table;
+  
+  table.render({
+     elem: '#test'
+    ,url:'/api/table1.html'
+    ,cellMinWidth: 80 //全局定义常规单元格的最小宽度，layui 2.2.1 新增
+    ,cols: [[
+        {field:'checkboxid', width:50, title: ''}
+       ,{field:'id', width:80, title: '榜单 ID'}
+      ,{field:'username',width:80,title:"榜单名称"}
+      ,{field:'sex', width:80, title: '标签',}
+      ,{field:'city', width:80, title: '类型'}
+      ,{field:'sign', title: '签名', width: '30%', minWidth: 100} //minWidth：局部定义当前单元格的最小宽度，layui 2.2.1 新增
+      ,{field:'experience', title: '样式', sort: true}
+      ,{field:'score', title: '状态', sort: true}
+      ,{field:'classify', title: '操作'}
+      ,{field:'wealth', width:137, title: '财富', sort: true}
+    ]]
+  });
+});
     </script>
 </body>
 
